# rgame

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
assets/: CREDITS.md
examples/: gfx_snapshot.rs  snapshot.rs
src/: app.rs  checker.rs  lib.rs  main.rs  save.rs
src/content/: books.rs  casts.rs  critters.rs  ferris.rs  items.rs  kitchen.rs  lore.rs  market.rs  mod.rs  quests.rs  schedule.rs  sides.rs  stones.rs  wilds.rs
src/gfx/: atlas.rs  font.rs  frame.rs  mod.rs  scene.rs
src/ui/: art.rs  cast.rs  dialogue.rs  effects.rs  journal.rs  mod.rs  overworld.rs  title.rs  wilds.rs
src/world/: camera.rs  entity.rs  map.rs  mod.rs  zones.rs
tests/: journey.rs  render.rs  solve_through.rs
tests/solutions/: 01_the_festival_lantern.rs  02_the_bakers_ledger.rs  02_the_market_sign.rs  03_the_bakers_ledger.rs  03_the_deep_well.rs  04_a_spell_for_wren.rs  04_open_or_closed.rs  04_the_map_pins.rs  05_mushrooms_and_manners.rs  05_the_toll_sign.rs  06_the_deep_well.rs  06_the_echo_cave.rs  07_the_ferry_token.rs  07_the_map_pins.rs  08_counting_fireflies.rs  08_the_borrowed_rod.rs  09_a_message_in_a_bottle.rs  09_a_spell_for_wren.rs  10_the_lost_book.rs  10_the_standard_baskets.rs  11_mushrooms_and_manners.rs  11_the_stone_golem.rs  12_the_echo_cave.rs  12_the_sorting_of_spellbooks.rs  13_the_winter_hollow.rs  14_the_lost_bell.rs  15_the_dock_ledger.rs  16_the_ferry_token.rs  17_the_borrowed_rod.rs  18_the_net_log.rs  19_a_message_in_a_bottle.rs  20_the_lost_book.rs  21_the_stone_golem.rs  22_the_sorting_of_spellbooks.rs  (+7 more)
tools/: bake_atlas.py
(+43 files in other folders)
