[package]
name = "rgame"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
font8x8 = "0.3"
macroquad = { version = "0.4", optional = true }
png = "0.17"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[features]
# The graphical (windowed) frontend. Kept behind a feature so `cargo test`
# and the TUI build never compile macroquad.
gfx = ["dep:macroquad"]

[[bin]]
name = "rune-road-gfx"
path = "src/bin/rune_road_gfx.rs"
required-features = ["gfx"]
